fix: add 24px gap token

--- a/projects/angular/src/layout/density/_properties.density.scss
+++ b/projects/angular/src/layout/density/_properties.density.scss
@@ -73,7 +73,8 @@
   --clr-base-gap-s: #{tokens.$cds-global-space-5};
   --clr-base-gap-m: #{tokens.$cds-global-space-6};
   --clr-base-gap-l: #{tokens.$cds-global-space-7};
-  --clr-base-gap-xl: #{tokens.$cds-global-space-10};
+  --clr-base-gap-xl: #{tokens.$cds-global-space-9};
+  --clr-base-gap-2xl: #{tokens.$cds-global-space-10};
 
   --clr-base-icon-size-xs: #{tokens.$cds-global-space-6};
   --clr-base-icon-size-s: #{tokens.$cds-global-space-7};
